--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@shoptet/ui": "^0.0.1-alpha.0",
+    "@shoptet/ui": "0.1.0-alpha.1",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18"
