--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@shoptet/chart": "^0.1.0-alpha.0",
     "@shoptet/ui": "0.1.0-alpha.1",
     "next": "13.5.6",
     "react": "^18",
