--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@shoptet/chart": "^0.1.0-alpha.0",
-    "@shoptet/ui": "0.1.0-alpha.1",
+    "@shoptet/ui": "0.3.1-alpha",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18"
